kubernetes/clusters/mazino2d-as-se1-dev/infra/argocd/argo-rollouts-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eac
      namespace: apps
  hostnames:
    - argo-rollouts.mazino2d-k3s.duckdns.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argo-rollouts-dashboard
          port: 3100
          weight: 1
